--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flare_flutter: ^3.0.0
   lottie: ^1.0.1
   vector_math: ^2.0.8
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
